
* Improved mob selector for smoking, drinking, being robbed and being married.
* Improved sound and volume of a few animals
* Improved fixed structures system (more clear, optimized and stable)
* Improved road-to-settlemen's-gate system
* Improved roads & walls code
* Improved GUI opening code
* Improved unit costs
* Improved dragon command tab completion

* Optimized dragons, giants and ice creatures
* Optimized lots of client-size things

* Silver, gold, valyrian steel and different gems now has fixed prices world-wide.
* Midges and butterflies can't spawn in winter now
* Biome visit achievements and achievement shields now require more biomes and achievements.
* Moved zero coords of the world closer to Winterfell
* Rebalanced +alignment values for killing
* Returned sandstone chests, ice & obsidian stalactites to natural spawn
* Returned targaryen items, lannicter brooch and silver hand brooch to natural drop

* Fixed bug with Petyr Baelish and dagger. Now he can sell only one dagger, and if did this, won't drop dagger after death.
* Fixed bug with uncraftable crafting tables
* Fixed bug with lhazar spear crafting
* Fixed bug with labradorite cracked bricks crafting
* Fixed bug with North men spawning in Gift
* Fixed bug with no craft ice spear, ice bricks
* Fixed bug with shrykes', werewolves', ifekevrons' swimming ai.
* Fixed different bugs related to mobs and their frost/heat immune
* Fixed bug with dragon size
* Fixed bug with broken title system
* Fixed bug with caves under settelements
* Fixed bug with no-effect fields in config
* Fixed bug with arryn conquest spawnlist
* Fixed bug with one stone wall
* Fixed bug with uncraftable weirwood fence
* Fixed bug with month name
* Fixed bug with drown Euron Greyjoy and its soldiers
* Fixed wrong names of waypoints (example: Servin's C. -> Cerwyn's C.)
* Fixed very old bug with imflammable leaves
* Fixed bug with Trystane Martell drop
* Fixed bug with one broken command
* Fixed bug with cargo cart