@@ -3,13 +3,13 @@ package got.common.entity.animal;
 import got.GOT;
 import got.common.database.GOTGuiId;
 import got.common.database.GOTItems;
+import got.common.entity.GOTEntityRegistry;
 import got.common.entity.ai.GOTEntityAIHiredHorseRemainStill;
 import got.common.entity.ai.GOTEntityAIHorseFollowHiringPlayer;
 import got.common.entity.ai.GOTEntityAIHorseMoveToRiderTarget;
 import got.common.entity.other.GOTEntityNPC;
-import got.common.entity.GOTEntityRegistry;
-import got.common.entity.other.utils.GOTEntityUtils;
 import got.common.entity.other.iface.GOTNPCMount;
+import got.common.entity.other.utils.GOTEntityUtils;
 import got.common.item.other.GOTItemMountArmor;
 import got.common.util.GOTCrashHandler;
 import got.common.util.GOTReflection;
