@@ -6,7 +6,6 @@ import got.common.database.GOTAchievement;
 import got.common.database.GOTItems;
 import got.common.entity.ai.GOTEntityAIAttackOnCollide;
 import got.common.util.GOTReflection;
-import got.common.world.biome.GOTBiome;
 import net.minecraft.block.Block;
 import net.minecraft.entity.*;
 import net.minecraft.entity.ai.EntityAIBase;
@@ -66,7 +65,7 @@ public class GOTEntityMammoth extends GOTEntityHorse {
 
 	@Override
 	public EntityAIBase createMountAttackAI() {
-		return new GOTEntityAIAttackOnCollide(this, 1.0, true);
+		return new GOTEntityAIAttackOnCollide(this, 1.4, true);
 	}
 
 	@Override
