@@ -3,8 +3,8 @@ package got.common.entity.animal;
 import got.common.GOTLevelData;
 import got.common.database.GOTAchievement;
 import got.common.database.GOTItems;
-import got.common.entity.other.GOTEntityNPC;
 import got.common.entity.GOTEntityRegistry;
+import got.common.entity.other.GOTEntityNPC;
 import got.common.entity.other.iface.GOTAmbientCreature;
 import got.common.util.GOTCrashHandler;
 import got.common.world.biome.GOTBiome;
