@@ -21,12 +21,11 @@ import net.minecraft.world.World;
 import java.util.List;
 
 public class GOTEntitySnowBear extends EntityAnimal implements GOTBiome.ImmuneToFrost {
-	private final EntityAIBase attackAI = new GOTEntityAIAttackOnCollide(this, 1.5, false);
-	private final EntityAIBase panicAI = new EntityAIPanic(this, 1.5);
+	private final EntityAIBase attackAI = new GOTEntityAIAttackOnCollide(this, 1.4, false);
+	private final EntityAIBase panicAI = new EntityAIPanic(this, 1.4);
 	private final EntityAIBase targetNearAI = new EntityAINearestAttackableTarget(this, EntityPlayer.class, 0, true);
 
 	private int hostileTick;
-	private boolean prevIsChild = true;
 
 	@SuppressWarnings({"WeakerAccess", "unused"})
 	public GOTEntitySnowBear(World world) {
@@ -158,20 +157,14 @@ public class GOTEntitySnowBear extends EntityAnimal implements GOTBiome.ImmuneTo
 	public void onLivingUpdate() {
 		if (!worldObj.isRemote) {
 			boolean isChild = isChild();
-			if (isChild != prevIsChild) {
-				if (isChild) {
-					tasks.removeTask(attackAI);
-					tasks.addTask(2, panicAI);
-					targetTasks.removeTask(targetNearAI);
+			if (!isChild) {
+				tasks.removeTask(panicAI);
+				if (hostileTick > 0) {
+					tasks.addTask(1, attackAI);
+					targetTasks.addTask(1, targetNearAI);
 				} else {
-					tasks.removeTask(panicAI);
-					if (hostileTick > 0) {
-						tasks.addTask(1, attackAI);
-						targetTasks.addTask(1, targetNearAI);
-					} else {
-						tasks.removeTask(attackAI);
-						targetTasks.removeTask(targetNearAI);
-					}
+					tasks.removeTask(attackAI);
+					targetTasks.removeTask(targetNearAI);
 				}
 			}
 		}
@@ -191,7 +184,6 @@ public class GOTEntitySnowBear extends EntityAnimal implements GOTBiome.ImmuneTo
 				resetInLove();
 			}
 		}
-		prevIsChild = isChild();
 	}
 
 	@Override
